feat: udpated logs to output to file

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -58,6 +58,7 @@ tasks:
     deps: [build]
     cmds:
       - sudo scp ./{{.BUILD_DIR}}/{{.BINARY_NAME}} kelvinc@192.168.0.235:/home/kelvinc/shiftpod
+      - sha256sum ./{{.BUILD_DIR}}/{{.BINARY_NAME}}
 
   check:
     desc: Run all checks (fmt, vet, lint, test)
