--- a/k3s/testpod.yaml
+++ b/k3s/testpod.yaml
@@ -1,9 +1,26 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: test-pod-shim
+  name: nginx
 spec:
-  runtimeClassName: shiftpod-class
-  containers:
-  - name: nginx
-    image: nginx:latest
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+      annotations:
+        shiftpod/enable-checkpoint: "true"
+    spec:
+      runtimeClassName: shiftpod-class
+      containers:
+        - image: nginx
+          name: nginx
+          ports:
+            - containerPort: 80
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
