--- a/k3s/manager/daemonset.yaml
+++ b/k3s/manager/daemonset.yaml
@@ -3,27 +3,20 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: shiftpod-manager
-  namespace: shiftpod-system
+  namespace: kube-system
   labels:
-    app.kubernetes.io/name: shiftpod-manager
-    app.kubernetes.io/component: manager
-    app.kubernetes.io/part-of: shiftpod
-    app.kubernetes.io/version: "v1"
+    app: shiftpod-manager
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: shiftpod-manager
-      app.kubernetes.io/component: manager
+      app: shiftpod-manager
   template:
     metadata:
+      labels:
+        app: shiftpod-manager
     spec:
       serviceAccountName: shiftpod-manager
       hostNetwork: true
-      hostPID: false
-      dnsPolicy: ClusterFirstWithHostNet
-      nodeSelector:
-        shiftpod.io/node: "true"
-
       tolerations:
         - key: node-role.kubernetes.io/control-plane
           operator: Exists
@@ -31,137 +24,53 @@ spec:
         - key: node-role.kubernetes.io/master
           operator: Exists
           effect: NoSchedule
-        - key: CriticalAddonsOnly
-          operator: Exists
-
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1001
-        runAsGroup: 1001
-        fsGroup: 1001
-        seccompProfile:
-          type: RuntimeDefault
-
-      # Init container to prepare directories
-      initContainers:
-        - name: prepare-dirs
-          image: alpine:3.18
-          command:
-            - sh
-            - -c
-            - |
-              mkdir -p /var/lib/shiftpod/checkpoints
-              mkdir -p /var/run/shiftpod
-              chown -R 1001:1001 /var/lib/shiftpod
-              chown -R 1001:1001 /var/run/shiftpod
-          securityContext:
-            runAsUser: 0
-            runAsGroup: 0
-            allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: true
-            capabilities:
-              drop:
-                - ALL
-              add:
-                - CHOWN
-                - DAC_OVERRIDE
-          volumeMounts:
-            - name: checkpoint-dir
-              mountPath: /var/lib/shiftpod
-            - name: socket-dir
-              mountPath: /var/run/shiftpod
-
       containers:
         - name: manager
           image: shiftpod/manager:latest
-          imagePullPolicy: IfNotPresent
-
-          # Security context
-          securityContext:
-            allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: true
-            runAsNonRoot: true
-            runAsUser: 1001
-            runAsGroup: 1001
-            capabilities:
-              drop:
-                - ALL
-
-          # Environment variables
+          imagePullPolicy: Never
           env:
             - name: NODE_NAME
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
-            - name: NODE_ADDRESS
+            - name: NODE_IP
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
-            - name: POD_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-            - name: POD_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
+            - name: CHECKPOINT_DIR
+              value: "/var/lib/shiftpod/checkpoints"
+            - name: SOCKET_PATH
+              value: "/var/run/shiftpod/manager.sock"
+            - name: GRPC_PORT
+              value: "9090"
             - name: RUST_LOG
-              value: "info"
-
-          # Command line arguments
-          args:
-            - --node-name=$(NODE_NAME)
-            - --node-address=$(NODE_ADDRESS)
-            - --checkpoint-dir=/var/lib/shiftpod/checkpoints
-            - --unix-socket=/var/run/shiftpod/manager.sock
-            - --grpc-port=9090
-            - --log-level=info
-
-          # Ports
+              value: "debug"
           ports:
-            - name: grpc
-              containerPort: 9090
-              protocol: TCP
-
-          # Volume mounts
+            - containerPort: 9090
+              name: grpc
+              hostPort: 9090
           volumeMounts:
-            - name: checkpoint-dir
-              mountPath: /var/lib/shiftpod
+            - name: checkpoint-storage
+              mountPath: /var/lib/shiftpod/checkpoints
             - name: socket-dir
               mountPath: /var/run/shiftpod
-            - name: tmp
-              mountPath: /tmp
-
-          # Resource limits
           resources:
             requests:
-              cpu: 100m
-              memory: 128Mi
+              memory: "128Mi"
+              cpu: "100m"
             limits:
-              cpu: 500m
-              memory: 512Mi
-
-      # Restart policy
-      restartPolicy: Always
-
-      # Volumes
+              memory: "512Mi"
+              cpu: "500m"
+          securityContext:
+            runAsUser: 0
+            runAsGroup: 0
+            privileged: true
       volumes:
-        - name: checkpoint-dir
+        - name: checkpoint-storage
           hostPath:
-            path: /var/lib/shiftpod
+            path: /var/lib/shiftpod/checkpoints
             type: DirectoryOrCreate
         - name: socket-dir
           hostPath:
             path: /var/run/shiftpod
             type: DirectoryOrCreate
-        - name: tmp
-          emptyDir:
-            sizeLimit: 1Gi
-
-      terminationGracePeriodSeconds: 30
-
-  updateStrategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 0
