--- a/k3s/manager/kustomization.yaml
+++ b/k3s/manager/kustomization.yaml
@@ -1,34 +1,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-metadata:
-  name: shiftpod-manager
-  annotations:
-    config.kubernetes.io/local-config: "true"
-
-namespace: shiftpod-system
-
 resources:
-  - namespace.yaml
   - crd.yaml
-  - configmap.yaml
-  - service.yaml
+  - rbac.yaml
   - daemonset.yaml
+  - service.yaml
 
-# Common labels applied to all resources
-commonLabels:
-  app.kubernetes.io/name: shiftpod-manager
-  app.kubernetes.io/component: manager
-  app.kubernetes.io/part-of: shiftpod
-  app.kubernetes.io/version: "v1"
-  app.kubernetes.io/managed-by: kustomize
+labels:
+  - pairs:
+      app: shiftpod-manager
 
-# Common annotations
-commonAnnotations:
-  shiftpod.io/managed-by: kustomize
-  shiftpod.io/version: "v1"
+namespace: kube-system
 
-# Images to customize
 images:
   - name: shiftpod/manager
     newTag: latest
