--- a/k3s/manager/service.yaml
+++ b/k3s/manager/service.yaml
@@ -2,18 +2,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: shiftpod-manager-grpc
-  namespace: shiftpod-system
+  name: shiftpod-manager
+  namespace: kube-system
   labels:
-    app.kubernetes.io/name: shiftpod-manager
-    app.kubernetes.io/component: manager
-    app.kubernetes.io/part-of: shiftpod
+    app: shiftpod-manager
 spec:
   type: ClusterIP
-  clusterIP: None
+  selector:
+    app: shiftpod-manager
   ports:
     - name: grpc
       port: 9090
       targetPort: 9090
       protocol: TCP
-  publishNotReadyAddresses: true
