--- a/manager/Cargo.toml
+++ b/manager/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "shiftpod-manager"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 # Kubernetes
@@ -18,7 +18,7 @@ tonic = "0.10"
 prost = "0.12"
 
 # CLI
-clap = { version = "4.0", features = ["derive"] }
+clap = { version = "4.0", features = ["derive", "env"] }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
